--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -19,7 +19,7 @@ sidebar_position: 2
 | 2023.1.8 | 番组   | 『プレミアの巣窟』MEAN GIRLS    |    [生](https://www.bilibili.com/video/BV1oG4y1w7DE?t=406.8)      |                      |
 | 2023.1.13 | 番组   | 読売テレビ『す・またん』5:10~   | [生](https://pan.baidu.com/s/17Kokk2qMrRXN99khkf8ySA?pwd=0122)      |                      |
 | 2023.1.13 | 番组   | 『ネタパレ』23:40~   |  [生](https://www.bilibili.com/video/BV1UM411b75b)     |                      |
-| 2023.1.14 | 番组   | 読売テレビ『キューン』2:04〜   |       |                      |
+| 2023.1.14 | 番组   | 読売テレビ『キューン』2:04〜   | [生](https://pan.baidu.com/s/1T0bVFSA1LDSNg9XzGVCNjw?pwd=0122)      |                      |
 | 2023.1.20 | 杂志   | 『VOCE』2023年3月号   |        |    [amazon](https://www.amazon.co.jp/gp/product/B0BQZ89G3D)                  |
 | 2023.1.28 | 音乐   | 『Venue101』#24 MC 23:00~   |        |                      |
 | 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html#tokyo) |
