--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -20,7 +20,7 @@ sidebar_position: 2
 | 2023.1.13 | 番组   | 読売テレビ『す・またん』ZIP! 5:10~   | [生](https://pan.baidu.com/s/17Kokk2qMrRXN99khkf8ySA?pwd=0122)      |                      |
 | 2023.1.13 | 番组   | 『ネタパレ』23:40~   |  [生](https://www.bilibili.com/video/BV1UM411b75b)     |                      |
 | 2023.1.14 | 番组   | 読売テレビ『キューン』CunE!! 2:04〜   | [生](https://pan.baidu.com/s/1T0bVFSA1LDSNg9XzGVCNjw?pwd=0122)      |                      |
-| 2023.1.20 | 杂志   | 『VOCE』2023年3月号   |        |    [amazon](https://www.amazon.co.jp/gp/product/B0BQZ89G3D)                  |
+| 2023.1.20 | 杂志   | 『VOCE』2023年3月号   |   [微博](https://weibo.com/5177703789/Mp4IYc0JD)     |    [amazon](https://www.amazon.co.jp/gp/product/B0BQZ89G3D)                  |
 | 2023.1.28 | 音乐   | 『Venue101』#24 MC 23:00~   |        |                      |
 | 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html#tokyo) |
 | 2023.2.17 | 音乐剧  | 『MEAN GIRLS』【福岡】キャナルシティ劇場(～ 2.19)                       |         | [详细日程](https://musical-meangirls.jp/schedule.html#fukuoka)  |
