--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -31,6 +31,7 @@ sidebar_position: 2
 | 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html#tokyo) |
 | 2023.1.31 | 新闻   | 『闹钟tv』   | [生](https://pan.baidu.com/s/17zTeXSvBic2a_-5-YJBEpA?pwd=0122 )  |                      |
 | 2023.2.4 | 音乐   | 『Venue101』#24 MC 23:00~ 嘉宾: AileTheShota『Yumeiro』 SHISHAMO『恋する -10YEARS THANK YOU-』 LE_SSERAFIM『FEARLESS』|      |                    |
+| 2023.2.5 | 番组   | 『プレミアの巣窟』MEANGIRLS公演映像   |       |                      |
 | 2023.2.9 | 杂志   | 『CM NOW』2023年3月号   |   |       |
 | 2023.2.10 | CM     | Apuweiser-riche Spring vol.2 配信 |  |          |
 | 2023.2.17 | 音乐剧  | 『MEAN GIRLS』【福岡】キャナルシティ劇場(～ 2.19)      |         | [详细日程](https://musical-meangirls.jp/schedule.html#fukuoka)  |
