--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -215,7 +215,7 @@ sidebar_position: 1
 | 2022.12.7 | 音乐   | 『2022FNS歌謡祭』『SWEET MEMORIES』松下洸平 × 生田絵梨花pf × 宮本笑里Vl　|  [全场熟肉](https://www.bilibili.com/video/BV1RR4y1C7RV?t=1694.3)      | [「銀の龍の背に乗って」](https://pan.baidu.com/s/1ntDHT2uoENCwh4Taam7YhA?pwd=0122)&[TVer幕后](https://www.bilibili.com/video/BV178411V7aZ)&[其他](https://pan.baidu.com/s/1plitacrQ3w33wnc-XBeejQ?pwd=0122)                     |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.9  | 音乐   | 「オーディションへいこう」MV公開   |  |  [油管](https://www.youtube.com/watch?v=qrw5teKjt-s)  |
-| 2022.12.10 | 新闻    | 情報番組『キューン‼』Mean Girls    |  [生](https://pan.baidu.com/s/1JhItE8R8YQSeSsNaVEEv9w?pwd=0122)    |               |
+| 2022.12.10 | 新闻    | 情報番組『キューン!!』Mean Girls    |  [生](https://pan.baidu.com/s/1JhItE8R8YQSeSsNaVEEv9w?pwd=0122)    |               |
 | 2022.12.10 | 音乐   | 『Venue101』#23 MC 23:00~ 嘉宾:JO1『REAL』 なにわ男子『ハッピーサプライズ』 NiziU『BlueMoon』  | [生](https://www.bilibili.com/video/BV1vM411z7WV)       |                      |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00『配信』   |    | [生](https://www.bilibili.com/video/BV1Fd4y1v7q8)   |
