--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -31,17 +31,20 @@ sidebar_position: 2
 | 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html#tokyo) |
 | 2023.1.31 | 新闻   | 『闹钟tv』   | [生](https://pan.baidu.com/s/17zTeXSvBic2a_-5-YJBEpA?pwd=0122 )  |                      |
 | 2023.2.4 | 音乐   | 『Venue101』#24 MC 23:00~ 嘉宾: AileTheShota『Yumeiro』 SHISHAMO『恋する -10YEARS THANK YOU-』 LE_SSERAFIM『FEARLESS』| [生](https://www.bilibili.com/video/BV1EG4y1u7gj)     |                    |
-| 2023.2.5 | 番组   | 『プレミアの巣窟』MEANGIRLS公演映像   |   [生](链接：https://pan.baidu.com/s/12VoedFh3Hn9KcSKM-ExSBw?pwd=0122)       |                      |
+| 2023.2.5 | 番组   | 『プレミアの巣窟』MEANGIRLS公演映像   |   [生](https://pan.baidu.com/s/12VoedFh3Hn9KcSKM-ExSBw?pwd=0122)       |                      |
 | 2023.2.9 | 杂志   | 『CM NOW』2023年3月号   |   |       |
 | 2023.2.10 | CM     | Apuweiser-riche Spring vol.2 配信 |  |  [Apuweiser-riche 官网](https://ap-story.jp/cts/apuweiser-riche/230210_apu_catalog.html)           |
 | 2023.2.10 | 新闻    | 情報番組『キューン!!』Mean Girls    |  [生](https://pan.baidu.com/s/1nTgcEa04dmeNUirai4Nogg?pwd=0122)    |               |
-| 2023.2.15 | 广播   | FM802『TACTY IN THE MORNING』10:00～   |       |                      |
+| 2023.2.15 | 广播   | FM802『TACTY IN THE MORNING』10:00～   | [生](https://pan.baidu.com/s/1ksF6ieMCeP1OmtqJ-ZDWTA?pwd=0122)      |                      |
 | 2023.2.17 | 音乐剧  | 『MEAN GIRLS』【福岡】キャナルシティ劇場(～ 2.19)      |         | [详细日程](https://musical-meangirls.jp/schedule.html#fukuoka)  |
-| 2023.2.18 | 音乐   | 『Venue101』#25 MC 23:00~ 嘉宾: ＝LOVE『この空がトリガー』 櫻坂46『桜月』 ヤングスキニー『らしく』|   |                    |
+| 2023.2.17 | 新闻    | 情報番組『キューン!!』Mean Girls    |  [生](https://pan.baidu.com/s/1GFp2kreBJA8liDMrtEUxJg?pwd=0122)    |               |
+| 2023.2.18 | 音乐   | 『Venue101』#25 MC 23:00~ 嘉宾: ＝LOVE『この空がトリガー』 櫻坂46『桜月』 ヤングスキニー『らしく』| [生](https://www.bilibili.com/video/BV1kx4y1c7vo/)  |                    |
 | 2023.2.20 | 杂志   | 『madame FIGARO japon』2023年4月号   |   |       |
 | 2023.2.23 | 音乐剧  | 『MEAN GIRLS』【大阪】森ノ宮ピロティホール(～ 2.27)               |         |  [详细日程](https://musical-meangirls.jp/schedule.html#osaka)|
+| 2023.2.25 | 音乐   | 『Venue101』#26 MC 23:00~ 嘉宾: NCT127『Ay_Yo』 GENERATIONS『ワンダーラスト』 NOA『JustFeelIt feat. #AyumuImazu』|   |                    |
 | 2023.4.4 | 音乐剧  |『COCOON PRODUCTION 2023 シブヤデマタアイマショウ』Guest: 生田絵梨花 小池徹平 | |  [链接](https://www.bunkamura.co.jp/cocoon/lineup/23_shibuyade2023.html)|
 | 2023.4.9 | 音乐剧  | 『GYPSY』【東京】東京芸術劇場プレイハウス(~4.30)              |         |  [详细日程](https://gypsy2023.com/tokyo.html)|
 | 2023.5.4 | 音乐剧  | 『GYPSY』【大阪】森ノ宮ピロティホール(~5.7)            |       |  [详细日程](https://gypsy2023.com/osaka.html)  |
 | 2023.5.12 | 音乐剧  | 『GYPSY』【愛知】刈谷市総合文化センター アイリス 大ホール(~5.14)            |         |  [详细日程](https://gypsy2023.com/aichi.html)  |
 | 2023.5.19 | 音乐剧  | 『GYPSY』【福岡】キャナルシティ劇場(~5.21)            |         |  [详细日程](https://gypsy2023.com/fukuoka.html)  |
+
