--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -38,7 +38,7 @@ sidebar_position: 2
 | 2023.2.15 | 广播   | FM802『TACTY IN THE MORNING』10:00～   | [生](https://pan.baidu.com/s/1ksF6ieMCeP1OmtqJ-ZDWTA?pwd=0122)      |                      |
 | 2023.2.17 | 音乐剧  | 『MEAN GIRLS』【福岡】キャナルシティ劇場(～ 2.19)      |         | [详细日程](https://musical-meangirls.jp/schedule.html#fukuoka)  |
 | 2023.2.17 | 新闻    | 情報番組『キューン!!』Mean Girls    |  [生](https://pan.baidu.com/s/1GFp2kreBJA8liDMrtEUxJg?pwd=0122)    |               |
-| 2023.2.18 | 音乐   | 『Venue101』#25 MC 23:00~ 嘉宾: ＝LOVE『この空がトリガー』 櫻坂46『桜月』 ヤングスキニー『らしく』| [生](https://www.bilibili.com/video/BV1kx4y1c7vo/)  |                    |
+| 2023.2.18 | 音乐   | 『Venue101』#25 MC 23:00~ 嘉宾: ＝LOVE『この空がトリガー』 櫻坂46『桜月』 ヤングスキニー『らしく』| [生](https://www.bilibili.com/video/BV1kx4y1c7vo/)  |       远程             |
 | 2023.2.20 | 杂志   | 『madame FIGARO japon』2023年4月号   |   |       |
 | 2023.2.23 | 音乐剧  | 『MEAN GIRLS』【大阪】森ノ宮ピロティホール(～ 2.27)               |         |  [详细日程](https://musical-meangirls.jp/schedule.html#osaka)|
 | 2023.2.25 | 音乐   | 『Venue101』#26 MC 23:00~ 嘉宾: NCT127『Ay_Yo』 GENERATIONS『ワンダーラスト』 NOA『JustFeelIt feat. #AyumuImazu』|   |                    |
