--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -41,7 +41,12 @@ sidebar_position: 2
 | 2023.2.18 | 音乐   | 『Venue101』#25 MC 23:00~ 嘉宾: ＝LOVE『この空がトリガー』 櫻坂46『桜月』 ヤングスキニー『らしく』| [生](https://www.bilibili.com/video/BV1kx4y1c7vo/)  |       远程             |
 | 2023.2.20 | 杂志   | 『madame FIGARO japon』2023年4月号   |  [微博](https://weibo.com/2077867213/MtRFpeKUj) |       |
 | 2023.2.23 | 音乐剧  | 『MEAN GIRLS』【大阪】森ノ宮ピロティホール(～ 2.27)               |         |  [详细日程](https://musical-meangirls.jp/schedule.html#osaka)|
-| 2023.2.25 | 音乐   | 『Venue101』#26 MC 23:00~ 嘉宾: NCT127『Ay_Yo』 GENERATIONS『ワンダーラスト』 NOA『JustFeelIt feat. #AyumuImazu』|   |                    |
+| 2023.2.25 | 音乐   | 『Venue101』#26 MC 23:00~ 嘉宾: NCT127『Ay_Yo』 GENERATIONS『ワンダーラスト』 NOA『JustFeelIt feat. #AyumuImazu』|[生](https://www.bilibili.com/video/BV1324y1n7Gr)   |  远程  |
+| 2023.2.26 | 音乐  | 『11th YEAR BIRTHDAY LIVE DAY5〜秋元真夏 卒業コンサート〜』OG留言  | [熟](https://www.bilibili.com/video/BV1rA411C7kD)   |         |
+| 2023.3.2 | CM     | 東京ミッドタウン八重洲「新しい風」篇 | [油管](https://www.youtube.com/watch?v=Zrmz7I5Y4fc)   |         |
+| 2023.3.4 | 音乐   | 『Venue101』#27 MC 23:00~ 嘉宾: STU48『息をする心』 きゃない『バニラ』 NiziU『Paradise』| [生](https://www.bilibili.com/video/BV1HD4y1M7RC)  |   |
+| 2023.3.11 | 音乐   | 『Venue101』#28 MC 23:00~ 嘉宾: Kep1er『IdoDoyou』 SnowMan『タペストリー』 なにわ男子『SpecialKiss』|  |   |
+| 2023.3.15 | 广播   | NHKラジオ第1『大竹しのぶのスピーカーズコーナー』21:05~21:55   |     |                      |
 | 2023.4.4 | 音乐剧  |『COCOON PRODUCTION 2023 シブヤデマタアイマショウ』Guest: 生田絵梨花 小池徹平 | |  [链接](https://www.bunkamura.co.jp/cocoon/lineup/23_shibuyade2023.html)|
 | 2023.4.9 | 音乐剧  | 『GYPSY』【東京】東京芸術劇場プレイハウス(~4.30)              |         |  [详细日程](https://gypsy2023.com/tokyo.html)|
 | 2023.5.4 | 音乐剧  | 『GYPSY』【大阪】森ノ宮ピロティホール(~5.7)            |       |  [详细日程](https://gypsy2023.com/osaka.html)  |
