--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -48,12 +48,14 @@ sidebar_position: 2
 | 2023.3.11 | 音乐   | 『Venue101』#29 MC 23:00~ 嘉宾: Kep1er『IdoDoyou』 SnowMan『タペストリー』 なにわ男子『SpecialKiss』|[生](https://www.bilibili.com/video/BV1Wg4y1b7HD/)  |   |
 | 2023.3.15 | 广播   | NHKラジオ第1『大竹しのぶのスピーカーズコーナー』21:05~21:55   | [生](https://pan.baidu.com/s/1GRe80J3SSP9jFs23Wl64iw?pwd=0122)    |         |
 | 2023.3.18 | 音乐   | 『Venue101』#30 MC 23:00~ 嘉宾: 渚ハニーとサザナミダーリンs『Ilovechukimiに夢中』 乃木坂46『人は夢を二度見る』 BEFIRST『BoomBoomBack』| [乃木坂46cut](https://www.bilibili.com/video/BV1wv4y1V7tH/)|   |
+| 2023.3.31 | CM     | Apuweiser-riche Summer vol.1 配信 |  |  [Apuweiser-riche 官网](https://ap-story.jp/cts/apuweiser-riche/230331_apu_webvisual.html)           |
 | 2023.4.3 | 杂志   | act guide『アクトガイド』 2023 Season 15 大竹しのぶ 生田絵梨花 対談インタビュー  |   |       |
 | 2023.4.4 | 音乐剧  |『COCOON PRODUCTION 2023 シブヤデマタアイマショウ』Guest: 生田絵梨花 小池徹平 | |  [链接](https://www.bunkamura.co.jp/cocoon/lineup/23_shibuyade2023.html)|
 | 2023.4.5 | 番组   | 「アカデミーナイトG」（TBS）2:02～2:42   |   |       |
 | 2023.4.7 | 杂志   | 「大人のおしゃれ手帖」大竹しのぶ 生田絵梨花 対談インタビュー   |   |       |
 | 2023.4.8 | 音乐   | 『Venue101』#31 MC 23:00~ 嘉宾: 梅田サイファー『かまへん』 JO1『Tiger』 シンガーズハイ『ノールス』| |   |
 | 2023.4.9 | 音乐剧  | 『GYPSY』【東京】東京芸術劇場プレイハウス(~4.30)              |         |  [详细日程](https://gypsy2023.com/tokyo.html)|
+| 2023.4.14 | CM     | Apuweiser-riche Summer vol.2 配信 |  |           |
 | 2023.5.4 | 音乐剧  | 『GYPSY』【大阪】森ノ宮ピロティホール(~5.7)            |       |  [详细日程](https://gypsy2023.com/osaka.html)  |
 | 2023.5.12 | 音乐剧  | 『GYPSY』【愛知】刈谷市総合文化センター アイリス 大ホール(~5.14)            |         |  [详细日程](https://gypsy2023.com/aichi.html)  |
 | 2023.5.19 | 音乐剧  | 『GYPSY』【福岡】キャナルシティ劇場(~5.21)            |         |  [详细日程](https://gypsy2023.com/fukuoka.html)  |
