--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -216,7 +216,7 @@ sidebar_position: 1
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.9  | 音乐   | 「オーディションへいこう」MV公開   |  |  [油管](https://www.youtube.com/watch?v=qrw5teKjt-s)  |
 | 2022.12.10 | 新闻    | 情報番組『キューン!!』Mean Girls    |  [生](https://pan.baidu.com/s/1JhItE8R8YQSeSsNaVEEv9w?pwd=0122)    |               |
-| 2022.12.10 | 音乐   | 『Venue101』#23 MC 23:00~ 嘉宾:JO1『REAL』 なにわ男子『ハッピーサプライズ』 NiziU『BlueMoon』  | [生](https://www.bilibili.com/video/BV1vM411z7WV)       |                      |
+| 2022.12.10 | 音乐   | 『Venue101』#红白sp MC 23:00~ 嘉宾:JO1『REAL』 なにわ男子『ハッピーサプライズ』 NiziU『BlueMoon』  | [生](https://www.bilibili.com/video/BV1vM411z7WV)       |                      |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00『配信』   |    | [生](https://www.bilibili.com/video/BV1Fd4y1v7q8)   |
 | 2022.12.12  | 新闻    | 闹钟 TV-猜拳『PICU』|    [生](https://pan.baidu.com/s/16DShR7fm7z5PireV_6rJxA?pwd=0122)              |                |
