--- a/docs/years/2024.md
+++ b/docs/years/2024.md
@@ -11,3 +11,4 @@ sidebar_position: 3
 | 🗓 日期    | 📌 分类 | 💛 详情                                                                      | 🔗 链接 | 🔨 备注                                                    |
 | :-------- | :------ | :--------------------------------------------------------------------------- | :-----: | ---------------------------------------------------------- |
 | 2024.1.3 | 电影   | フジテレビ 映画「Dr.コトー診療所」地上波初放送21:00〜   |       |                    |
+| 2024.1.27 | 音乐  | 『Venue101』# MC 23:00～ 嘉宾: 『』『』『』| |  |
