--- a/docs/years/2024.md
+++ b/docs/years/2024.md
@@ -12,3 +12,5 @@ sidebar_position: 3
 | :-------- | :------ | :--------------------------------------------------------------------------- | :-----: | ---------------------------------------------------------- |
 | 2024.1.3 | 电影   | フジテレビ 映画「Dr.コトー診療所」地上波初放送21:00〜   |       |                    |
 | 2024.1.27 | 音乐  | 『Venue101』# MC 23:00～ 嘉宾: 『』『』『』| |  |
+| 2024.4.21 | 音乐  | 『フレンズ・オブ・ディズニー・コンサート』Friends of Disney Concert 昼公演：13:00開場／14:00開演 | |  |
+| 2024.4.21 | 音乐  | 『フレンズ・オブ・ディズニー・コンサート』Friends of Disney Concert 夜公演：17:00開場／18:00開演 | |  |
