--- a/docs/years/2024.md
+++ b/docs/years/2024.md
@@ -11,6 +11,7 @@ sidebar_position: 3
 | 🗓 日期    | 📌 分类 | 💛 详情                                                                      | 🔗 链接 | 🔨 备注                                                    |
 | :-------- | :------ | :--------------------------------------------------------------------------- | :-----: | ---------------------------------------------------------- |
 | 2024.1.1 | 番组  | 『笑神様は突然に…元日SP』12:00～14:50| |  |
+| 2024.1.2 | 音乐  | 『生放送！NHK紅白歌合戦お正月スペシャル』| |  |
 | 2024.1.3 | 电影   | フジテレビ 映画「Dr.コトー診療所」地上波初放送21:00〜   |       |                    |
 | 2024.1.27 | 音乐  | 『Venue101』# MC 23:00～ 嘉宾: 『』『』『』| |  |
 | 2024.4.21 | 音乐  | 『フレンズ・オブ・ディズニー・コンサート』Friends of Disney Concert 昼公演：13:00開場／14:00開演 | |  |
