--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -54,18 +54,150 @@ sidebar_position: 2
 | 2023.4.5 | 番组   | 「アカデミーナイトG」（TBS）2:02～2:42   | [生](https://pan.baidu.com/s/1nKspaYfwWyFA2OHmolboCw?pwd=0122)  |       |
 | 2023.4.7 | 杂志   | 「大人のおしゃれ手帖」2023年5月号 大竹しのぶ 生田絵梨花 対談インタビュー   | [微博](https://weibo.com/5177703789/MB1sBDafk)  |       |
 | 2023.4.7 | 番组   | 「あさイチ」プレミアムトーク(NHK) vtr 8:15～9:55   | [生](https://pan.baidu.com/s/1wEHVLZV0G_KmW7eYjlgEkA?pwd=0122)  |       |
-| 2023.4.8 | 音乐   | 『Venue101』#30 MC 23:00~ 嘉宾: 梅田サイファー『かまへん』 JO1『Tiger』 シンガーズハイ『ノールス』| |   |
+| 2023.4.8 | 音乐   | 『Venue101』#30 MC 23:00~ 嘉宾: 梅田サイファー『かまへん』 JO1『Tiger』 シンガーズハイ『ノールス』| [生](https://pan.baidu.com/s/1gATjHHuGkWuwN0V0h5lPog?pwd=0122) |   |
 | 2023.4.9 | 音乐剧  | 『GYPSY』【東京】東京芸術劇場プレイハウス(~4.30)              |         |  [详细日程](https://gypsy2023.com/tokyo.html)|
 | 2023.4.12 | 杂志   | 「anan」No.2344   |   |       |
 | 2023.4.14 | CM     | Apuweiser-riche Summer vol.2 配信 |  |           |
-| 2023.4.15 | 音乐   | 『Venue101』#31 MC 23:00~ 嘉宾: DXTEEN『Brand New Day』 日向坂46『One choice』 MAZZEL『MISSION』| |   |
-| 2023.4.22 | 音乐  | 『Venue101』#32 MC 23:00~ 嘉宾: TOMORROWXTOGETHER『Devil by the window ～ Sugar Rush Ride』 BE:FIRST『Smile Again』 Liella!『Second Sparkle』| | |
+| 2023.4.15 | 音乐   | 『Venue101』#31 MC 23:00~ 嘉宾: DXTEEN『Brand New Day』 日向坂46『One choice』 MAZZEL『MISSION』| [生](https://pan.baidu.com/s/1b2DEBq4wS4DS36I7mpfolw?pwd=0122) |   |
+| 2023.4.22 | 音乐  | 『Venue101』#32 MC 23:00~ 嘉宾: TOMORROWXTOGETHER『Devil by the window ～ Sugar Rush Ride』 BE:FIRST『Smile Again』 Liella!『Second Sparkle』| [生](https://pan.baidu.com/s/1ujpzh0eip3uVKqkqi7_TFw?pwd=0122)| |
 | 2023.4.26 | 音乐     | 「生田絵梨花 卒業コンサート」Blu-ray&DVD |  |           |
 | 2023.5.4 | 音乐剧  | 『GYPSY』【大阪】森ノ宮ピロティホール(~5.7)            |       |  [详细日程](https://gypsy2023.com/osaka.html)  |
 | 2023.5.12 | 音乐剧  | 『GYPSY』【愛知】刈谷市総合文化センター アイリス 大ホール(~5.14)            |         |  [详细日程](https://gypsy2023.com/aichi.html)  |
-| 2023.5.13 | 音乐  | 『Venue101』#33 MC 23:00~ 嘉宾: SnowMan『あいことば』ちゃんみな『ImNotOK』緑黄色社会『うそつき』| |  |
+| 2023.5.13 | 音乐  | 『Venue101』#33 MC 23:00~ 嘉宾: SnowMan『あいことば』ちゃんみな『ImNotOK』緑黄色社会『うそつき』| [生](https://pan.baidu.com/s/18oD7qVG4nsp0oXHcE74YpA?pwd=0122)|  |
 | 2023.5.19 | 音乐剧  | 『GYPSY』【福岡】キャナルシティ劇場(~5.21)            |         |  [详细日程](https://gypsy2023.com/fukuoka.html)  |
-| 2023.5.20 | 音乐  | 『Venue101』#34 MC 23:00~ 嘉宾: カメレオン・ライム・ウーピーパイ『Love You!!!!!!』藤原さくら『話そうよ』KingandPrince『ichiban』『シンデレラガール』『Beautiful Flower』| | 远程 |
-| 2023.5.27 | 音乐  | 『Venue101』#35 MC 23:00~ 嘉宾: INI『FANFARE』IVE『WAVE』NEE『生命謳歌』| |  |
-| 2023.6.10 | 音乐  | 『Venue101』#36 MC 23:00~ 嘉宾: iri『Season』MILK『topaz』MAZZEL『Vivid』| |  |
+| 2023.5.20 | 音乐  | 『Venue101』#34 MC 23:00~ 嘉宾: カメレオン・ライム・ウーピーパイ『Love You!!!!!!』藤原さくら『話そうよ』KingandPrince『ichiban』『シンデレラガール』『Beautiful Flower』|[生](https://pan.baidu.com/s/1rOtGML536Rl4BNz2j3Pm_w?pwd=0122) | 远程 |
+| 2023.5.27 | 音乐  | 『Venue101』#35 MC 23:00~ 嘉宾: INI『FANFARE』IVE『WAVE』NEE『生命謳歌』| [生](https://pan.baidu.com/s/1AIUEFE33wYkVi2KwY3AoOg?pwd=0122) |  |
+| 2023.6.10 | 音乐  | 『Venue101』#36 MC 23:00~ 嘉宾: iri『Season』MILK『topaz』MAZZEL『Vivid』|[生](https://pan.baidu.com/s/1gEHuXap53Jx7Md8_bIHOLg?pwd=0122) |  |
+| 2023.6.17 | 音乐  | 『Venue101』#37 MC 23:00~ 嘉宾: 由薫『星月夜』Mrs GREEN APPLE『Magic』King and Prince『なにもの』| [生](https://pan.baidu.com/s/1BsFT2QRtjnHQ6sng42NeIw?pwd=0122)|  |
+| 2023.6.22 | 杂志   | 「VOCE」2023年8月号   | [微博](https://weibo.com/5177703789/N6qFF1JGF)  |       |
+| 2023.6.27 | 番组  | 『ヒルナンデス!』 11:55～13:55  | [生](https://pan.baidu.com/s/1lINAydnOf0XRTAb_jnWNgA?pwd=0122)   |    |
+| 2023.6.30 | 新闻  | 『Oha!4 NEWS LIVE』 4:30~  |  [生](https://pan.baidu.com/s/1m3Y3lqH-HRGRFr0AyI55fQ?pwd=0122)  |    |
+| 2023.6.30 | 电视剧  | 『こっち向いてよ向井くん』制作发表会 |   [生](https://www.youtube.com/watch?v=BbddbCee5uw)   |    |
+| 2023.7.1 | 音乐  | 『Venue101』#38 MC 23:00~ 嘉宾: 櫻坂46『Start over!』Travis Japan『Candy Kiss』YONA YONA WEEKENDERS『シラフ』| [櫻坂46cut](https://www.bilibili.com/video/BV12z4y1n7rS/)|  |
+| 2023.7.4 | 番组  | 『ヒルナンデス!』 11:55～13:55  |  [生](https://www.bilibili.com/video/BV1sj411U7BC/)  |    |
+| 2023.7.5 | 新闻  | 『ZIP』 |              |    |
+| 2023.7.5 | 番组  | 『ぐるナイ』预告 22:54～23:00  |              |    |
+| 2023.7.6 | 新闻  | 『DAY DAY』9:00~  | [生](https://pan.baidu.com/s/1KQx2jyObklQHR1xYUZyXGA?pwd=0122)    |    |
+| 2023.7.6 | 番组  | 『ぐるナイ』 19:00~ 2時間SP  |    [生](https://www.bilibili.com/video/BV1gj411U78Y/)     |    |
+| 2023.7.8 | 番组  | 『世界一受けたい授業』19:56～20:54   |              |    |
+| 2023.7.8 | 音乐  | 『Venue101』#39 MC 23:00~ 嘉宾: SUPER BEAVER『儚くない』THE BOYZ『Delicious』なにわ男子『Poppin' Hoppin' Lovin'』| |  |
+| 2023.7.9 | 番组  | 『ニノさん』日本テレビ 10:25〜11:25   |              |    |
+| 2023.7.9 | 番组  | 『日テレ系 夏の新ドラマ合体!見どころ先取りSP』14:00～15:00   |   [生](https://pan.baidu.com/s/1HiPpq2HhSbHTKSMh1sJdpg?pwd=0122)      | 同7.8tver   |
+| 2023.7.9 | 番组  | 『うわっ！ダマされた大賞インターナショナル』19:58～21:54   |              |    |
+| 2023.7.11 | 音乐  | 『うたコン』19:57~ NHK総合| |  |
+| 2023.7.11 | 番组  | 『カズレーザーと学ぶ。』22:00～   |              |    |
+| 2023.7.12 | 电视剧  | 『こっち向いてよ向井くん』 第1集 22:00~   |              |    |
+| 2023.7.15 | 音乐  | 『音楽の日』「PART OF YOUR WORLD」迪士尼电影「小美人鱼」14:00～21:54 | |  |
+| 2023.7.16 | 广播  | 『土田晃之 日曜のへそ』「大島優子×生田絵梨花 スペシャル対談」12:00～16:00   |              |    |
+| 2023.7.19 | 电视剧  | 『こっち向いてよ向井くん』 第2集 22:00~   |              |    |
+| 2023.7.21 | 杂志   | 「日経マネー」9月号  | |   |
 | 2023.7.21 | 电影   | 映画『 #Drコトー診療所 』Blu-ray＆DVD発売決定| |   |
+| 2023.7.22 | 杂志   | 「VOCE」9月号  | |   |
+| 2023.7.22 | 音乐  | 『Venue101×27時間テレビ』 MC 22:55～ 嘉宾: imase『NEWSNagisamile』JO1『NEWSmile』NiziU『COCONUT』日向坂46『Am I ready?』| |  |
+| 2023.7.26 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』DVD発売| |   |
+| 2023.7.26 | 电视剧  | 『こっち向いてよ向井くん』 第3集 22:00~   |              |    |
+| 2023.8.2 | 电视剧  | 『こっち向いてよ向井くん』 第4集 22:00~   |              |    |
+| 2023.8.5 | 番组  | NHK総合「第13回 明石家紅白！」19:30～20:48 |              |    |
+| 2023.8.9 | 新闻  | 『ZIP!』 |              |    |
+| 2023.8.9 | 新闻  | 『DayDay.』    |              |    |
+| 2023.8.9 | 电视剧  | 『こっち向いてよ向井くん』 第5集 22:00~   |              |    |
+| 2023.8.12 | 音乐  | 『ライブエール2023』 ハマいく『ビートDEトーヒ』19:30～| |  |
+| 2023.8.12 | 番组  | 「千鳥かまいたちアワー」23:30～23:55 |              |    |
+| 2023.8.16 | 电视剧  | 『こっち向いてよ向井くん』 第6集 22:00~   |              |    |
+| 2023.8.23 | 电视剧  | 『こっち向いてよ向井くん』 第7集 22:00~   |              |    |
+| 2023.8.27 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』地上波初放送 15:45～NHK Eテレ | |   |
+| 2023.8.30 | 电视剧  | 『こっち向いてよ向井くん』 第8集 22:00~   |              |    |
+| 2023.9.2 | 音乐  | 『Venue101』#40 MC 23:00～ 嘉宾: 僕が見たかった青空『青空について考える』Mori Calliope『six_feet_under』MAZZEL『LIGHTNING』| |  |
+| 2023.9.6 | 电视剧  | 『こっち向いてよ向井くん』 第9集 22:00~   |              |    |
+| 2023.9.9 | 音乐  | 『Venue101』#41 MC 23:00～ 嘉宾: 乃木坂46『おひとりさま天国』SnowMan『Dangerholic』LE_SSERAFIM『UNFORGIVEN (feat. Nile Rodgers)』| |  |
+| 2023.9.10 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Haneda(Tokyo) OPEN 14:00 / START 15:00    |              |    |
+| 2023.9.10 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Haneda(Tokyo) OPEN 18:00 / START 19:00    |              |    |
+| 2023.9.12 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Fukuoka OPEN 18:00 / START 19:00    |              |    |
+| 2023.9.13 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Fukuoka OPEN 18:00 / START 19:00    |              |    |
+| 2023.9.13 | 电视剧  | 『こっち向いてよ向井くん』 第10集 22:00~   |              |    |
+| 2023.9.16 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Osaka Bayside OPEN 14:00 / START 15:00    |              |    |
+| 2023.9.16 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Osaka Bayside OPEN 18:00 / START 19:00    |              |    |
+| 2023.9.17 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Nagoya OPEN 14:00 / START 15:00    |              |    |
+| 2023.9.17 | FC  | Erika Ikuta Autumn Live Tour 2023 Zepp Nagoya OPEN 18:00 / START 19:00    |              |    |
+| 2023.10.5 | FC  | Erika Ikuta Autumn Live Tour 2023 東京国際フォーラム OPEN 17:30 / START 18:30    |              |    |
+| 2023.10.7 | 音乐  | 『Venue101』#42 MC 23:00～ 嘉宾: BiTE A SHOCK『Patient!!』BOY NEXT DOOR『But Sometimes』緑黄色社会『サマータイムシンデレラ』| |  |
+| 2023.10.13 | 新闻   | 「す・またん！＆ZIP！」ディズニー100周年記念映画「ウィッシュ」日本版声優に決定 |  |           |
+| 2023.10.13 | CM     | Apuweiser-riche Winter vol.1 配信 |  |           |
+| 2023.10.14 | 新闻   | 「闹钟tv」「ウィッシュ」 |  |           |
+| 2023.10.14 | 音乐  | 『Venue101』#43 MC 23:00～ 嘉宾: INI『HANA_花』ITZY『RINGO』WANIMA『夏暁』| |  |
+| 2023.10.16 | 新闻   | 「闹钟tv」「ウィッシュ」 |  |           |
+| 2023.10.16 | 新闻   | 「news every.」「ウィッシュ」 |  |           |
+| 2023.10.19 | 番组  | 「LIFE！秋」22:00~| |  |
+| 2023.10.21 | 新闻   | 「闹钟tv」「ウィッシュ」 |  |           |
+| 2023.10.24 | 新闻   | 「闹钟tv」「ウィッシュ～この願い～」を初公開 |  |           |
+| 2023.10.24 | 新闻   | 「す・またん！＆ZIP！」「ウィッシュ～この願い～」を初公開 |  |           |
+| 2023.10.24 | 新闻   | 「DayDay.」「ウィッシュ～この願い～」を初公開 |  |           |
+| 2023.10.27 | CM   | 「東京都防災検定」 |  |           |
+| 2023.10.28 | 新闻   | 「闹钟tv」 |  |           |
+| 2023.10.28 | 音乐  | 『Venue101』#44 MC 23:00～ 嘉宾: NCT 127『Fact Check』櫻坂46『承認欲求』BE:FIRST『Mainstream』| |  |
+| 2023.10.30 | 电影  | ディズニー・スタジオ公式YouTube・TikTokで生配信 劇中歌「ウィッシュ～この願い～」17:50〜 & 配信開始| |  |
+| 2023.10.31 | 新闻   | 「闹钟tv」 |  |           |
+| 2023.10.31 | 新闻   | 「グッド！モーニング」「ドデスカ！」TBS『THE TIME, 』 |  |           |
+| 2023.11.3 | CM     | Apuweiser-riche Winter vol.2 配信 |  |           |
+| 2023.11.3 | 电影   | 「大阪・光の饗宴2023開宴式」17:00～19:00 |  |           |
+| 2023.11.4 | 新闻   | 「闹钟tv」 |  |           |
+| 2023.11.4 | 音乐  | 『Venue101』#45 MC 23:00～ 嘉宾: 日向坂46『君は0から1になれ』FANTASTICS『STARBOYS』由薫『Crystals』| |  |
+| 2023.11.5 | 新闻   | 「シューイチ」 |  |           |
+| 2023.11.6 | 新闻   | 「す・またん！＆ZIP！」 |  |           |
+| 2023.11.6 | 广播  | 『FM802 TACTY IN THE MORNING』8:00～   |              |    |
+| 2023.11.8 | 电影   | 松尾スズキと30分の女優 DVD-BOX発売決定  | |   |
+| 2023.11.10 | 音乐  | 『Music Station』20:00〜22:00| |  |
+| 2023.11.10 | 番组  | 「スイッチインタビュー」松尾スズキ×生田絵梨花 EP1 21:30〜22:00 |              |    |
+| 2023.11.11 | 音乐  | 『Venue101』#46 MC 23:00～ 嘉宾: &TEAM『War Cry』羊文学『more than words』マカロニえんぴつ『リンジュー•ラヴ』| |  |
+| 2023.11.17 | 番组  | 「スイッチインタビュー」松尾スズキ×生田絵梨花 EP2 21:30〜22:00 |              |    |
+| 2023.11.18 | 电影   | 宮崎・みやざき臨海公園 劇中歌「ウィッシュ～この願い〜」を披露  | |   |
+| 2023.11.20 | 新闻   | 「闹钟tv」 |  |           |
+| 2023.11.20 | 音乐  | 『CDTV』19:00〜21:00| |  |
+| 2023.11.21 | 音乐  | 『うたコン』19:57~ NHK総合| |  |
+| 2023.11.22 | 广播  | 『OH! MY CHANNEL!』TOKAI RADIO 13:00~14:00| |  |
+| 2023.11.22 | 番组  | 『キャッチ！』15:48~| |  |
+| 2023.11.25 | 音乐  | 『Venue101』#47 MC 23:00～ 嘉宾: 生田絵梨花『ウィッシュ ～この願い～』Kep1er『Grand Prix』SUPER BEAVER『決心』| |  |
+| 2023.11.28 | 新闻   | 「闹钟tv」 |  |           |
+| 2023.11.28 | 电影   | 『ウィッシュ』公開記念特别谈话活动 18:00  | | [链接](https://mitsui-shopping-park.com/lalaport/fukuoka/event/2617368.html)  |
+| 2023.11.29 | CM   | 『アデカフェ　～Delicious & Sustainable～』  | | [特設サイトURL](https://www.adeka.co.jp/food/deliplants/index.html)  |
+| 2023.11.30 | 新闻   | 「バリはやッ!ZIP!」 |  |           |
+| 2023.11.30 | 电影   | 『ウィッシュ』 完成披露上映会 開場 10:40〜 / 開演 11:00〜 | |   |
+| 2023.12.1 | 新闻   | 「闹钟tv」 |  |           |
+| 2023.12.2 | 音乐  | 『Best Artist 2023』 19:00～22:54 | |  |
+| 2023.12.2 | 音乐  | 『Venue101』#48 MC 23:00～ 嘉宾: アイナ•ジエンド『アイコトバ』CRAVITY『Dilly Dally』乃木坂46『Monopoly』| |  |
+| 2023.12.4 | 番组  | 『タダイマ！(RKB毎日放送)』| |  |
+| 2023.12.5 | 新闻   | 『バリはやッ!ZIP!』6:06~ |  |           |
+| 2023.12.5 | 广播  | 『DAYDREAM MAGIC』13:30~14:30 FM AICHI(80.7MHz)| |  |
+| 2023.12.6 | 电影   | 『ウィッシュ』 監督来日スペシャルイベント 配信 16:50～  | |   |
+| 2023.12.7 | 新闻   | TBS『THE TIME’』 |  |           |
+| 2023.12.7 | 新闻   |『ドデスカ！』 |  |           |
+| 2023.12.7 | 新闻   |『闹钟tv』 |  |           |
+| 2023.12.8 | 新闻   |『ドデスカ！』 |  |           |
+| 2023.12.8 | 电影   | 『ウィッシュ』 大阪プレミア試写会 18:30開演 本編上映前舞台挨拶  | |   |
+| 2023.12.9 | 新闻   |『闹钟tv』 |  |           |
+| 2023.12.9 | 广播   | 今日は一日“ディズニー”三昧 20:00~  | |   |
+| 2023.12.9 | 音乐  | 『Venue101』红白SP MC 23:00～ 嘉宾: ano『普変』キタニタツヤ『Moonthief』BE:FIRST『Glorious』| |  |
+| 2023.12.11 | 新闻   |『ドデスカ！』 |  |           |
+| 2023.12.12 | 番组  | 『星に願いを ～ディズニー 夢と魔法の100年～』19:57~20:42 NHK総合 ※一部地域は 12/15(金)| |  |
+| 2023.12.13 | 新闻   |『おはよう朝日です』 |  |           |
+| 2023.12.13 | 音乐  | 『FNS歌謡祭』第2夜 18:30～23:03| |  |
+| 2023.12.14 | 新闻   |『闹钟tv』 |  |           |
+| 2023.12.15 | 新闻   |『闹钟tv』 |  |           |
+| 2023.12.15 | 新闻   |『イチモニ！(HTB)』 |  |           |
+| 2023.12.15 | 电影   | 迪士尼100周年纪念作品「星愿」上映 & CD発売決定  | |   |
+| 2023.12.15 | 电影   | 短編映画『ワンス・アポン・ア・スタジオ -100年の思い出-』特別吹替版  | |   |
+| 2023.12.15 | 广播   | FM AICHI(80.7MHz) SUPER AWESOME RADIO！！21:55~22:00  | |   |
+| 2023.12.16 | 番组  | 『王様のブランチ』9:30~| |  |
+| 2023.12.17 | 番组  | 『アヤスクリプション』11:15~| |  |
+| 2023.12.18 | 番组  | 『何かオモシロいコトないの？』23:00～23:40 fujitv| |  |
+| 2023.12.19 | 新闻   |『DayDay.』 |  |           |
+| 2023.12.20 | 新闻   |『闹钟tv』 |  |           |
+| 2023.12.20 | 电影   | 日比谷『ウィッシュ』公開記念舞台挨拶 18:30～ | |   |
+| 2023.12.21 | 新闻   |『闹钟tv』 |  |           |
+| 2023.12.21 | 新闻   |TBS『THE TIME, 』 |  |           |
+| 2023.12.21 | 新闻   |『ドデスカ！（メ～テレ）』 |  |           |
+| 2023.12.21 | 番组  | 『紅白なび』20:43~| |  |
+| 2023.12.23 | 新闻   |『闹钟tv』 |  |           |
+| 2023.12.27 | 杂志   |『BAILA』バイラ2・3月合併号 |  |    [推](https://twitter.com/BAILA_magazine/status/1739784830819487813)       |
+| 2023.12.30 | 番组  | 『箱根駅伝 伝説のシーン表と裏 3時間SP』MC:生田絵梨花、内村光良 18:00~| |  |
+| 2023.12.31 | 音乐  | 『第74回NHK紅白歌合戦』ハマいく『ビートDEトーヒ』生田絵梨花『ウィッシュ～この願い～』19:20~ | |  |
