--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -93,7 +93,7 @@ sidebar_position: 2
 | 2023.7.21 | 杂志   | 「日経マネー」9月号  | |   |
 | 2023.7.21 | 电影   | 映画『 #Drコトー診療所 』Blu-ray＆DVD発売決定| |   |
 | 2023.7.22 | 杂志   | 「VOCE」9月号  | |   |
-| 2023.7.22 | 音乐  | 『Venue101×27時間テレビ』 MC 22:55～ 嘉宾: imase『NEWSNagisamile』JO1『NEWSmile』NiziU『COCONUT』日向坂46『Am I ready?』| |  |
+| 2023.7.22 | 音乐  | 『Venue101×27時間テレビ』 MC 22:55～ 嘉宾: imase『Nagisa』JO1『NEWSmile』NiziU『COCONUT』日向坂46『Am I ready?』| |  |
 | 2023.7.26 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』DVD発売| |   |
 | 2023.7.26 | 电视剧  | 『こっち向いてよ向井くん』 第3集 22:00~   |              |    |
 | 2023.8.2 | 电视剧  | 『こっち向いてよ向井くん』 第4集 22:00~   |              |    |
